# school-21

./: CMakeLists.txt
ft_ls/: Makefile  main.c  param_l.c  print.c  sort.c  test.c
ft_printf-1/: CMakeLists.txt  Makefile  a.out  main.c
ft_printf-1/a.out.dSYM/Contents/Resources/DWARF/: a.out
ft_printf-1/srcs/: color_print.c  floats.c  length.c  re_func.c  support.c
ft_printf/includes/: ft_printf.h
ft_printf/srcs/: color_print.c  flags.c  float_print.c  ft_printf.c  new.c  pres.c  print.c
minishell/: 11  Makefile  a.out  echo.c  ecx.c  ft_ls  main.c  minishell.h  minishell.h.gch  test.c
minishell/libft/: Makefile
minishell/libft/includes/: get_next_line.h  get_next_line2.h  libft.h
minishell/libft/src/: ft_atoi.c  ft_atoi_base.c  ft_binar_chr.c  ft_bzero.c  ft_free_split.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lst_push_back.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelitem.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_max.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_min.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+31 more)
printf/: CMakeLists.txt  Makefile  a.out  author  ft_printf.c  main.c  new.c  pres.c  print.c  test.c
printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
printf/includes/: ft_printf.h  ft_printf.h.gch
printf/libft/: Makefile
printf/srcs/: color_print.c  flags.c  float_print.c  floats.c  ft_printf.c  new.c  print.c  re_func.c
