cmake_minimum_required(VERSION 3.15)
project(printf_1 C)

set(CMAKE_C_STANDARD 11)

include_directories(printf/includes)
include_directories(printf/libft)

add_executable(printf_1
        printf/includes/ft_printf.h
        printf/libft/ft_atoi.c
        printf/libft/ft_bzero.c
        printf/libft/ft_isalnum.c
        printf/libft/ft_isalpha.c
        printf/libft/ft_isascii.c
        printf/libft/ft_isdigit.c
        printf/libft/ft_isprint.c
        printf/libft/ft_itoa.c
        printf/libft/ft_lstadd.c
        printf/libft/ft_lstdel.c
        printf/libft/ft_lstdelone.c
        printf/libft/ft_lstiter.c
        printf/libft/ft_lstmap.c
        printf/libft/ft_lstnew.c
        printf/libft/ft_memalloc.c
        printf/libft/ft_memccpy.c
        printf/libft/ft_memchr.c
        printf/libft/ft_memcmp.c
        printf/libft/ft_memcpy.c
        printf/libft/ft_memdel.c
        printf/libft/ft_memmove.c
        printf/libft/ft_memset.c
        printf/libft/ft_putchar.c
        printf/libft/ft_putchar_fd.c
        printf/libft/ft_putendl.c
        printf/libft/ft_putendl_fd.c
        printf/libft/ft_putnbr.c
        printf/libft/ft_putnbr_fd.c
        printf/libft/ft_putstr.c
        printf/libft/ft_putstr_fd.c
        printf/libft/ft_strcat.c
        printf/libft/ft_strchr.c
        printf/libft/ft_strclr.c
        printf/libft/ft_strcmp.c
        printf/libft/ft_strcpy.c
        printf/libft/ft_strdel.c
        printf/libft/ft_strdup.c
        printf/libft/ft_strequ.c
        printf/libft/ft_striter.c
        printf/libft/ft_striteri.c
        printf/libft/ft_strjoin.c
        printf/libft/ft_strlcat.c
        printf/libft/ft_strlen.c
        printf/libft/ft_strmap.c
        printf/libft/ft_strmapi.c
        printf/libft/ft_strncat.c
        printf/libft/ft_strncmp.c
        printf/libft/ft_strncpy.c
        printf/libft/ft_strnequ.c
        printf/libft/ft_strnew.c
        printf/libft/ft_strnstr.c
        printf/libft/ft_strrchr.c
        printf/libft/ft_strsplit.c
        printf/libft/ft_strstr.c
        printf/libft/ft_strsub.c
        printf/libft/ft_strtrim.c
        printf/libft/ft_tolower.c
        printf/libft/ft_toupper.c
        printf/libft/libft.h
        printf/srcs/flags.c
        printf/srcs/ft_printf.c
        printf/srcs/new.c
        printf/srcs/re_func.c)
